chore: refactor core architecture to a service-based DI system
This commit introduces a fundamental architectural overhaul, moving the plugin from a monolithic structure dependent on a static singleton (`Alley.getInstance()`) to a modern, decoupled service-based architecture inspired by Valance client.

The primary motivation was to address the tight coupling and maintenance difficulties of the old system. Previously, the main `Alley` class was responsible for manually instantiating every service, leading to a rigid structure that was difficult to extend or test.

The new system is built around a central Dependency Injection (DI) container, `AlleyContext`. This context is now responsible for the entire lifecycle of all major components:
- **Discovery**: Services are now automatically discovered at startup using the new `@Service` annotation. This eliminates the need for any manual registration.
- **Dependency Injection**: Services now declare their dependencies (as interfaces) in their constructors. The context automatically resolves and injects the required service instances.
- **Lifecycle Management**: All services implement the `IService` interface, giving them `initialize` and `shutdown` methods that the context calls at the appropriate times. This ensures resources like database connections are managed safely and startup/shutdown logic is executed in the correct order.

This refactoring was applied to all core components, including `ProfileService`, `MatchService`, `KitService`, `ArenaService`, and many others. Additionally, non-service classes (such as Listeners, Commands, and data models like `Profile` and `AbstractMatch`) have been decoupled and now use the clean `Alley.getInstance().getService(...)` locator pattern to interact with the new service layer.