@@ -1,6 +1,9 @@
 package dev.revere.alley.tool.reflection;
 
 import dev.revere.alley.Alley;
+import dev.revere.alley.api.constant.IPluginConstant;
+import dev.revere.alley.core.AlleyContext;
+import dev.revere.alley.core.annotation.Service;
 import dev.revere.alley.tool.logger.Logger;
 import lombok.Getter;
 import org.reflections.Reflections;
@@ -8,6 +11,7 @@ import org.reflections.Reflections;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Modifier;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 /**
@@ -16,38 +20,39 @@ import java.util.List;
  * @since 03/04/2025
  */
 @Getter
-public class ReflectionRepository {
-    protected final Alley plugin;
-    private final List<IReflection> reflectionServices;
+@Service(provides = IReflectionRepository.class, priority = 330)
+public class ReflectionRepository implements IReflectionRepository {
+    private final IPluginConstant pluginConstant;
+
+    private final List<IReflection> reflectionServices = new ArrayList<>();
 
     /**
-     * Constructor for the ReflectionRepository class.
-     *
-     * @param plugin The Alley plugin instance.
+     * Constructor for DI.
      */
-    public ReflectionRepository(Alley plugin) {
-        this.plugin = plugin;
-        this.reflectionServices = new ArrayList<>();
+    public ReflectionRepository(IPluginConstant pluginConstant) {
+        this.pluginConstant = pluginConstant;
+    }
+
+    @Override
+    public void initialize(AlleyContext context) {
         this.registerReflectionServices();
+        Logger.info("Registered " + this.reflectionServices.size() + " reflection helpers.");
     }
 
     private void registerReflectionServices() {
-        Reflections reflections = this.plugin.getPluginConstant().getReflections();
+        Reflections reflections = this.pluginConstant.getReflections();
+        if (reflections == null) {
+            Logger.error("ReflectionRepository cannot initialize: Reflections object is null.");
+            return;
+        }
+
         for (Class<? extends IReflection> clazz : reflections.getSubTypesOf(IReflection.class)) {
             if (clazz.isInterface() || Modifier.isAbstract(clazz.getModifiers())) {
                 continue;
             }
 
             try {
-                IReflection instance;
-                try {
-                    instance = clazz.getDeclaredConstructor(Alley.class).newInstance(this.plugin);
-                } catch (NoSuchMethodException e) {
-                    Constructor<? extends IReflection> constructor = clazz.getDeclaredConstructor();
-                    constructor.setAccessible(true);
-                    instance = constructor.newInstance();
-                }
-
+                IReflection instance = clazz.getDeclaredConstructor().newInstance();
                 this.reflectionServices.add(instance);
             } catch (Exception exception) {
                 Logger.logException("Failed to register reflection service: " + clazz.getName(), exception);
@@ -55,18 +60,17 @@ public class ReflectionRepository {
         }
     }
 
-    /**
-     * Retrieves a reflection service of the specified class type.
-     *
-     * @param clazz The class type of the service to retrieve.
-     * @return The service instance, or null if not found.
-     */
-    public <T extends IReflection> T getReflectionService(Class<T> clazz) {
-        for (IReflection service : this.reflectionServices) {
-            if (service.getClass().equals(clazz)) {
-                return clazz.cast(service);
-            }
-        }
-        return null;
+    @Override
+    public <T extends IReflection> T getReflectionService(Class<T> serviceClass) {
+        return this.reflectionServices.stream()
+                .filter(serviceClass::isInstance)
+                .map(serviceClass::cast)
+                .findFirst()
+                .orElse(null);
+    }
+
+    @Override
+    public List<IReflection> getReflectionServices() {
+        return Collections.unmodifiableList(this.reflectionServices);
     }
 }
